--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apk update && apk add strace && strace --output /strace-out/zkevm-sequencer.log --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequencer"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-sequencer.log  --string-limit=1024 --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequencer"
 
   zkevm-sequence-sender:
     container_name: zkevm-sequence-sender
@@ -85,7 +85,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apk update && apk add strace && strace --output /strace-out/zkevm-sequencer-sender.log --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequence-sender"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-sequencer-sender.log  --string-limit=1024 --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequence-sender"
 
   zkevm-json-rpc:
     container_name: zkevm-json-rpc
@@ -106,7 +106,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apk update && apk add strace && strace --output /strace-out/zkevm-json-rpc.log --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components rpc"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-json-rpc.log  --string-limit=1024 --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components rpc"
 
   zkevm-aggregator:
     container_name: zkevm-aggregator
@@ -124,7 +124,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apk update && apk add strace && strace --output /strace-out/zkevm-aggregator.log --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components aggregator"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-aggregator.log  --string-limit=1024 --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components aggregator"
 
   zkevm-sync:
     container_name: zkevm-sync
@@ -142,7 +142,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apk update && apk add strace && strace --output /strace-out/zkevm-sync.log --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components synchronizer"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-sync.log  --string-limit=1024 --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components synchronizer"
 
   zkevm-eth-tx-manager:
     container_name: zkevm-eth-tx-manager
@@ -160,7 +160,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apk update && apk add strace && strace --output /strace-out/zkevm-eth-tx-manager.log --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components eth-tx-manager"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-eth-tx-manager.log  --string-limit=1024 --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components eth-tx-manager"
 
   zkevm-l2gaspricer:
     container_name: zkevm-l2gaspricer
@@ -175,7 +175,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apk update && apk add strace && strace --output /strace-out/zkevm-l2gaspricer.log --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components l2gaspricer"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-l2gaspricer.log  --string-limit=1024 --follow-forks /app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components l2gaspricer"
 
   zkevm-state-db:
     container_name: zkevm-state-db
@@ -334,28 +334,12 @@ services:
     ports:
       - 8545:8545
       - 8546:8546
+    volumes:
+      - ./strace-out:/strace-out
+    entrypoint: /bin/sh
     command:
-      - "--http"
-      - "--http.api"
-      - "admin,eth,debug,miner,net,txpool,personal,web3"
-      - "--http.addr"
-      - "0.0.0.0"
-      - "--http.corsdomain"
-      - "*"
-      - "--http.vhosts"
-      - "*"
-      - "--ws"
-      - "--ws.origins"
-      - "*"
-      - "--ws.addr"
-      - "0.0.0.0"
-      - "--dev"
-      - "--datadir"
-      - "/geth_data"
-      - "--syncmode"
-      - "full"
-      - "--rpc.allow-unprotected-txs"
-
+      - "-c"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-mock-l1-network.log  --string-limit=1024 --follow-forks geth --http --http.api admin,eth,debug,miner,net,txpool,personal,web3 --http.addr 0.0.0.0 --http.corsdomain '*' --http.vhosts '*' --ws --ws.origins '*' --ws.addr 0.0.0.0 --dev --datadir /geth_data --syncmode full --rpc.allow-unprotected-txs"
   zkevm-prover:
     container_name: zkevm-prover
     image: hermeznetwork/zkevm-prover:v3.0.0-RC2
@@ -368,7 +352,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apt update && apt install -y strace && strace --output /strace-out/zkevm-prover.log --follow-forks zkProver -c /usr/src/app/config.json"
+      - "apt update && apt install -y strace && strace --output /strace-out/zkevm-prover.log  --string-limit=1024 --follow-forks zkProver -c /usr/src/app/config.json"
 
   zkevm-approve:
     container_name: zkevm-approve
@@ -383,7 +367,7 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "apk update && apk add strace && strace --output /strace-out/zkevm-approve.log --follow-forks /app/zkevm-node approve --network custom --custom-network-file /app/genesis.json --key-store-path /pk/keystore --pw testonly --am 115792089237316195423570985008687907853269984665640564039457584007913129639935 -y --cfg /app/config.toml"
+      - "apk update && apk add strace && strace --output /strace-out/zkevm-approve.log  --string-limit=1024 --follow-forks /app/zkevm-node approve --network custom --custom-network-file /app/genesis.json --key-store-path /pk/keystore --pw testonly --am 115792089237316195423570985008687907853269984665640564039457584007913129639935 -y --cfg /app/config.toml"
 
   zkevm-permissionless-db:
     container_name: zkevm-permissionless-db
