--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -364,10 +364,11 @@ services:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node approve --network custom --custom-network-file /app/genesis.json --key-store-path /pk/keystore --pw testonly --am 115792089237316195423570985008687907853269984665640564039457584007913129639935 -y --cfg /app/config.toml"
+      - -c
+      - /app/b2-zkevm-node approve --network custom --custom-network-file /app/genesis.json --key-store-path /pk/keystore --pw testonly --am 115792089237316195423570985008687907853269984665640564039457584007913129639935 -y --cfg /app/config.toml
 
   zkevm-permissionless-db:
     container_name: zkevm-permissionless-db
