feat: the mock prover network can be started(l1 is b2node) , l2 can transfer ether b2network/b2-node#20

--- a/test/Makefile
+++ b/test/Makefile
@@ -473,17 +473,16 @@ run: ## Runs a full node
 	$(RUNL1NETWORK)
 	sleep 5 
 	$(RUNZKPROVER)
-	sleep 15 
 	$(RUNAPPROVE)
-	# sleep 5
-	# $(RUNSYNC)
-	# sleep 10
-	# $(RUNETHTXMANAGER)
-	# $(RUNSEQUENCER)
-	# $(RUNSEQUENCESENDER)
-	# $(RUNL2GASPRICER)
-	# $(RUNAGGREGATOR)
-	# $(RUNJSONRPC)
+	sleep 5
+	$(RUNSYNC)
+	sleep 10
+	$(RUNETHTXMANAGER)
+	$(RUNSEQUENCER)
+	$(RUNSEQUENCESENDER)
+	$(RUNL2GASPRICER)
+	$(RUNAGGREGATOR)
+	$(RUNJSONRPC)
 
 .PHONY: stop
 stop: ## Stops all services
