--- a/test/.env
+++ b/test/.env
@@ -2,7 +2,8 @@
 # B2_ZKEVM_PROVER_IMAGE=ghcr.io/b2network/b2-zkevm-prover:20231107-163409-c78044e
 # B2_ZKEVM_PROVER_IMAGE=ghcr.io/b2network/b2-zkevm-prover:20231107-205241-c78044e
 B2_ZKEVM_PROVER_IMAGE=ghcr.io/b2network/b2-zkevm-prover:20231107-210123-c78044e
-B2_ZKEVM_NODE_IMAGE=ghcr.io/b2network/b2-zkevm-node:develop-v0.2.0-RC1-20231027-120130-f3ea9bee
+# B2_ZKEVM_NODE_IMAGE=ghcr.io/b2network/b2-zkevm-node:develop-v0.2.0-RC1-20231027-120130-f3ea9bee
+B2_ZKEVM_NODE_IMAGE=ghcr.io/b2network/b2-zkevm-node:develop-list-20231107-220652-ef1b3337
 B2_NODE_IMAGE=ghcr.io/b2network/b2-node:20231031-175311-eb3cc87
 GRAFANA_IMAGE=grafana/grafana
 TELEGRAF_IMAGE=telegraf
