--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -63,10 +63,11 @@ services:
       - ./config/test.genesis.config.json:/app/genesis.json
       - ./:/datastreamer
       # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequencer"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequencer
 
   zkevm-sequence-sender:
     container_name: zkevm-sequence-sender
@@ -82,10 +83,11 @@ services:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequence-sender"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequence-sender
 
   zkevm-json-rpc:
     container_name: zkevm-json-rpc
@@ -102,11 +104,11 @@ services:
     volumes:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
-      - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components rpc"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components rpc
 
   zkevm-aggregator:
     container_name: zkevm-aggregator
@@ -121,10 +123,11 @@ services:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components aggregator"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components aggregator
 
   zkevm-sync:
     container_name: zkevm-sync
@@ -138,11 +141,11 @@ services:
     volumes:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
-      # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components synchronizer"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components synchronizer
 
   zkevm-eth-tx-manager:
     container_name: zkevm-eth-tx-manager
@@ -157,10 +160,11 @@ services:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components eth-tx-manager"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components eth-tx-manager
 
   zkevm-l2gaspricer:
     container_name: zkevm-l2gaspricer
@@ -172,10 +176,11 @@ services:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components l2gaspricer"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components l2gaspricer
 
   zkevm-state-db:
     container_name: zkevm-state-db
