--- a/.github/workflows/test-full-non-e2e.yml
+++ b/.github/workflows/test-full-non-e2e.yml
@@ -7,6 +7,7 @@ on:
       - master
       - develop
       - update-external-dependencies
+      - fix-action
       - 'release/**'
   pull_request:
 
