feat: addChainStateToB2Node b2network/b2-zkevm-node#5

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -336,6 +336,10 @@ services:
   zkevm-mock-l1-network:
     container_name: zkevm-mock-l1-network
     image: ${B2_NODE_IMAGE}
+    entrypoint:
+      - ethermintd
+    command:
+      - start
     ports:
       - 26658:26657
       - 8545:8545
