chore: new conf file test/config/non-container-test.node.config.toml to enable debug in vscode #8

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -345,9 +345,9 @@ services:
       - 8545:8545
       - 8546:8546
       - 8126:8125
-    volumes:
-      - /root/b2-node-single-client-all-data:/root/.ethermintd
-      - ${PWD}:/host
+    # volumes:
+      # - /root/b2-node-single-client-all-data:/root/.ethermintd
+      # - ${PWD}:/host
       # - ./strace-out:/strace-out
 
   zkevm-prover:
