--- a/test/Makefile
+++ b/test/Makefile
@@ -96,6 +96,11 @@ test-full-non-e2e: stop ## Runs non-e2e tests checking race conditions
 	docker logs $(DOCKERCOMPOSEZKPROVER)
 	trap '$(STOP)' EXIT; MallocNanoZone=0 go test -count=1 -short -race -p 1 -covermode=atomic -coverprofile=../coverage.out -timeout 70s ../...
 
+.PHONY: test-e2e-group-1-debug
+test-e2e-group-1-debug: ## Runs group 1 e2e tests checking race conditions
+	# trap '$(STOP)' EXIT; 
+	MallocNanoZone=0 go test -count=1 -race -v -p 1 -timeout 600s ../ci/e2e-group1/...
+
 .PHONY: test-e2e-group-1
 test-e2e-group-1: stop ## Runs group 1 e2e tests checking race conditions
 	$(RUNSTATEDB)
@@ -105,7 +110,7 @@ test-e2e-group-1: stop ## Runs group 1 e2e tests checking race conditions
 	$(RUNZKPROVER)
 	docker ps -a
 	docker logs $(DOCKERCOMPOSEZKPROVER)
-	trap '$(STOP)' EXIT; MallocNanoZone=0 go test -count=1 -race -v -p 1 -timeout 600s ../ci/e2e-group1/...
+	# trap '$(STOP)' EXIT; MallocNanoZone=0 go test -count=1 -race -v -p 1 -timeout 600s ../ci/e2e-group1/...
 
 .PHONY: test-e2e-group-2
 test-e2e-group-2: stop ## Runs group 2 e2e tests checking race conditions
@@ -481,7 +486,8 @@ run: ## Runs a full node
 	$(RUNSEQUENCESENDER)
 	$(RUNL2GASPRICER)
 	$(RUNAGGREGATOR)
-	$(RUNJSONRPC)
+	# read -p "Press enter to continue"
+	# $(RUNJSONRPC)
 
 .PHONY: stop
 stop: ## Stops all services
