--- a/test/.env
+++ b/test/.env
@@ -9,3 +9,6 @@ PROM_IMAGE=prom/prometheus:v2.39.1
 ALPINE_INSTALL_PKG_CMD='apk update && apk add strace &&'
 DEBIAN_LIKE_INSTALL_PKG_CMD='apt update && apt install -y strace &&'
 USE_STRACE='strace --output /strace-out/zkevm-mock-l1-network.log  --string-limit=1024 --follow-forks '
+
+# ETHEREUM_JSONRPC_HTTP_URL=http://192.168.50.127:8123
+ETHEREUM_JSONRPC_HTTP_URL=http://zkevm-explorer-json-rpc:8123
