--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 services:
   grafana:
     container_name: grafana
-    image: grafana/grafana-oss
+    image: ${GRAFANA_IMAGE}
     volumes:
       - ./config/grafana/datasources.yml:/etc/grafana/provisioning/datasources/default.yml:ro
       - ./config/grafana/dashboards.yml:/etc/grafana/provisioning/dashboards/default.yml:ro
@@ -22,7 +22,7 @@ services:
 
   telegraf:
     container_name: telegraf
-    image: telegraf
+    image: ${TELEGRAF_IMAGE}
     volumes:
       - ./config/telegraf.conf:/etc/telegraf/telegraf.conf:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -38,7 +38,7 @@ services:
 
   grafana-db:
     container_name: grafana-db
-    image: postgres:15
+    image: ${PG_IMAGE}
     expose:
       - 5432
     environment:
@@ -48,121 +48,143 @@ services:
 
   zkevm-sequencer:
     container_name: zkevm-sequencer
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     ports:
       - 9092:9091 # needed if metrics enabled
       - 6060:6060
+      - 6900:6900 # Data stream server
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
       - ZKEVM_NODE_POOL_DB_HOST=zkevm-pool-db
+      - ZKEVM_NODE_MTCLIENT_URI=${ZKEVM_NODE_MTCLIENT_URI}
+      - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
     volumes:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
+      - ./:/datastreamer
+      # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequencer"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequencer
 
   zkevm-sequence-sender:
     container_name: zkevm-sequence-sender
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
       - ZKEVM_NODE_POOL_DB_HOST=zkevm-pool-db
       - ZKEVM_NODE_SEQUENCER_SENDER_ADDRESS=0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+      - ZKEVM_NODE_MTCLIENT_URI=${ZKEVM_NODE_MTCLIENT_URI}
+      - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
     volumes:
       - ./sequencer.keystore:/pk/sequencer.keystore
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
+      # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequence-sender"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components sequence-sender
 
   zkevm-json-rpc:
     container_name: zkevm-json-rpc
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     ports:
       - 8123:8123
       - 8133:8133 # needed if WebSockets enabled
       - 9091:9091 # needed if metrics enabled
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
       - ZKEVM_NODE_POOL_DB_HOST=zkevm-pool-db
+      - ZKEVM_NODE_MTCLIENT_URI=${ZKEVM_NODE_MTCLIENT_URI}
+      - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
     volumes:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components rpc"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components rpc
 
   zkevm-aggregator:
     container_name: zkevm-aggregator
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     ports:
       - 50081:50081
       - 9093:9091 # needed if metrics enabled
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
       - ZKEVM_NODE_AGGREGATOR_SENDER_ADDRESS=0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
     volumes:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
+      # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components aggregator"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components aggregator
 
   zkevm-sync:
     container_name: zkevm-sync
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     ports:
       - 9095:9091 # needed if metrics enabled
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
+      - ZKEVM_NODE_MTCLIENT_URI=${ZKEVM_NODE_MTCLIENT_URI}
+      - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
     volumes:
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components synchronizer"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components synchronizer
 
   zkevm-eth-tx-manager:
     container_name: zkevm-eth-tx-manager
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     ports:
       - 9094:9091 # needed if metrics enabled
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
     volumes:
       - ./sequencer.keystore:/pk/sequencer.keystore
       - ./aggregator.keystore:/pk/aggregator.keystore
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
+      # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components eth-tx-manager"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components eth-tx-manager
 
   zkevm-l2gaspricer:
     container_name: zkevm-l2gaspricer
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     environment:
       - ZKEVM_NODE_POOL_DB_HOST=zkevm-pool-db
     volumes:
       - ./test.keystore:/pk/keystore
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
+      # - ./strace-out:/strace-out
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components l2gaspricer"
+      - -c
+      - /app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components l2gaspricer
 
   zkevm-state-db:
     container_name: zkevm-state-db
-    image: postgres:15
+    image: ${PG_IMAGE}
     deploy:
       resources:
         limits:
@@ -184,7 +206,7 @@ services:
 
   zkevm-pool-db:
     container_name: zkevm-pool-db
-    image: postgres:15
+    image: ${PG_IMAGE}
     deploy:
       resources:
         limits:
@@ -204,7 +226,7 @@ services:
 
   zkevm-event-db:
     container_name: zkevm-event-db
-    image: postgres:15
+    image: ${PG_IMAGE}
     deploy:
       resources:
         limits:
@@ -226,7 +248,7 @@ services:
 
   zkevm-explorer-l1:
     container_name: zkevm-explorer-l1
-    image: hermeznetwork/zkevm-explorer:latest
+    image: ${EXPLORER_IMAGE}
     ports:
       - 4000:4000
     environment:
@@ -245,7 +267,7 @@ services:
 
   zkevm-explorer-l1-db:
     container_name: zkevm-explorer-l1-db
-    image: postgres:15
+    image: ${PG_IMAGE}
     ports:
       - 5436:5432
     environment:
@@ -259,7 +281,7 @@ services:
 
   zkevm-explorer-l2:
     container_name: zkevm-explorer-l2
-    image: hermeznetwork/zkevm-explorer:latest
+    image: ${EXPLORER_IMAGE}
     ports:
       - 4001:4000
     environment:
@@ -267,12 +289,15 @@ services:
       - SUBNETWORK=Polygon Hermez
       - COIN=ETH
       - ETHEREUM_JSONRPC_VARIANT=geth
-      - ETHEREUM_JSONRPC_HTTP_URL=http://zkevm-explorer-json-rpc:8124
+      - ETHEREUM_JSONRPC_HTTP_URL=${ETHEREUM_JSONRPC_HTTP_URL}
       - DATABASE_URL=postgres://l2_explorer_user:l2_explorer_password@zkevm-explorer-l2-db:5432/l2_explorer_db
       - ECTO_USE_SSL=false
       - MIX_ENV=prod
       - LOGO=/images/blockscout_logo.svg
       - LOGO_FOOTER=/images/blockscout_logo.svg
+      - INDEXER_RECEIPTS_BATCH_SIZE=10
+      - INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=2
+      - INDEXER_CATCHUP_BLOCKS_CONCURRENCY=2
     command:
       - "/bin/sh"
       - "-c"
@@ -280,12 +305,12 @@ services:
 
   zkevm-explorer-json-rpc:
     container_name: zkevm-explorer-json-rpc
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     ports:
       - 8124:8124
       - 8134:8134 # needed if WebSockets enabled
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
       - ZKEVM_NODE_POOL_DB_HOST=zkevm-pool-db
       - ZKEVM_NODE_RPC_PORT=8124
       - ZKEVM_NODE_RPC_WEBSOCKETS_PORT=8134
@@ -295,11 +320,11 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components rpc --http.api eth,net,debug,zkevm,txpool,web3"
+      - "/app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components rpc --http.api eth,net,debug,zkevm,txpool,web3"
 
   zkevm-explorer-l2-db:
     container_name: zkevm-explorer-l2-db
-    image: postgres:15
+    image: ${PG_IMAGE}
     ports:
       - 5437:5432
     environment:
@@ -310,73 +335,76 @@ services:
 
   zkevm-mock-l1-network:
     container_name: zkevm-mock-l1-network
-    image: hermeznetwork/geth-zkevm-contracts:v2.0.0-RC1-fork.5-geth1.12.0
+    image: ${B2_NODE_IMAGE}
+    entrypoint:
+      - ethermintd
+    command:
+      - start
     ports:
+      - 26658:26657
       - 8545:8545
       - 8546:8546
-    command:
-      - "--http"
-      - "--http.api"
-      - "admin,eth,debug,miner,net,txpool,personal,web3"
-      - "--http.addr"
-      - "0.0.0.0"
-      - "--http.corsdomain"
-      - "*"
-      - "--http.vhosts"
-      - "*"
-      - "--ws"
-      - "--ws.origins"
-      - "*"
-      - "--ws.addr"
-      - "0.0.0.0"
-      - "--dev"
-      - "--datadir"
-      - "/geth_data"
-      - "--syncmode"
-      - "full"
-      - "--rpc.allow-unprotected-txs"
+      - 8126:8125
+    healthcheck:
+      test: 
+        - CMD
+        - curl 
+        - -X 
+        - POST 
+        - url 
+        - http://127.0.0.1:8545 
+        - -H 
+        - 'Content-Type: application/json;' 
+        - --data 
+        - '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}"'
+      interval: 5s
+      timeout: 10m
+      retries: 3
+ 
+    # volumes:
+      # - /root/b2-node-single-client-all-data:/root/.ethermintd
+      # - ${PWD}:/host
+      # - ./strace-out:/strace-out
 
   zkevm-prover:
     container_name: zkevm-prover
-    image: hermeznetwork/zkevm-prover:v2.2.2
+    image: ${B2_ZKEVM_PROVER_IMAGE}
     ports:
-      # - 50051:50051 # Prover
-      - 50052:50052 # Mock prover
       - 50061:50061 # MT
       - 50071:50071 # Executor
     volumes:
       - ./config/test.prover.config.json:/usr/src/app/config.json
-    command: >
-      zkProver -c /usr/src/app/config.json
-
-  zkprover-mock:
-    container_name: zkprover-mock
-    image: hermeznetwork/zkprover-mock:latest
-    ports:
-      - 43061:43061 # MT
-      - 43071:43071 # Executor
-    volumes:
-      - ./vectors/src:/app/testvectors
-    command: >
-      /app/zkprover-mock server --statedb-port 43061 --executor-port 43071 --test-vector-path /app/testvectors
+      # - ./strace-out:/strace-out
+    depends_on:
+      zkevm-mock-l1-network:
+        condition: service_healthy
+    command:
+      - -c
+      - /usr/src/app/config.json
 
   zkevm-approve:
     container_name: zkevm-approve
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
     volumes:
       - ./sequencer.keystore:/pk/keystore
       - ./config/test.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
+      # - ./strace-out:/strace-out
+    depends_on:
+      zkevm-mock-l1-network:
+        condition: service_healthy
+ 
+    entrypoint:
+      - /bin/sh
     command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node approve --network custom --custom-network-file /app/genesis.json --key-store-path /pk/keystore --pw testonly --am 115792089237316195423570985008687907853269984665640564039457584007913129639935 -y --cfg /app/config.toml"
+      - -c
+      - /app/b2-zkevm-node approve --network custom --custom-network-file /app/genesis.json --key-store-path /pk/keystore --pw testonly --am 115792089237316195423570985008687907853269984665640564039457584007913129639935 -y --cfg /app/config.toml
 
   zkevm-permissionless-db:
     container_name: zkevm-permissionless-db
-    image: postgres:15
+    image: ${PG_IMAGE}
     deploy:
       resources:
         limits:
@@ -398,15 +426,15 @@ services:
 
   zkevm-permissionless-node:
     container_name: zkevm-permissionless-node
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     ports:
       - 8125:8125
     environment:
       - ZKEVM_NODE_ISTRUSTEDSEQUENCER=false
-      - ZKEVM_NODE_STATEDB_USER=test_user
-      - ZKEVM_NODE_STATEDB_PASSWORD=test_password
-      - ZKEVM_NODE_STATEDB_NAME=state_db
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-permissionless-db
+      - ZKEVM_NODE_STATE_DB_USER=test_user
+      - ZKEVM_NODE_STATE_DB_PASSWORD=test_password
+      - ZKEVM_NODE_STATE_DB_NAME=state_db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-permissionless-db
       - ZKEVM_NODE_POOL_DB_USER=test_user
       - ZKEVM_NODE_POOL_DB_PASSWORD=test_password
       - ZKEVM_NODE_POOL_DB_NAME=pool_db
@@ -421,11 +449,11 @@ services:
     command:
       - "/bin/sh"
       - "-c"
-      - "/app/zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components \"rpc,synchronizer\""
+      - "/app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components \"rpc,synchronizer\""
 
   zkevm-permissionless-prover:
     container_name: zkevm-permissionless-prover
-    image: hermeznetwork/zkevm-prover:v2.2.2
+    image: ${B2_ZKEVM_PROVER_IMAGE}
     ports:
       # - 50058:50058 # Prover
       - 50059:50052 # Mock prover
@@ -437,7 +465,7 @@ services:
       zkProver -c /usr/src/app/config.json
 
   zkevm-metrics:
-    image: prom/prometheus:v2.39.1
+    image: ${PROM_IMAGE}
     container_name: zkevm-metrics
     restart: unless-stopped
     ports:
@@ -450,11 +478,11 @@ services:
 
   zkevm-sh:
     container_name: zkevm-sh
-    image: zkevm-node
+    image: ${B2_ZKEVM_NODE_IMAGE}
     stdin_open: true 
     tty: true
     environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
       - ZKEVM_NODE_POOL_DB_HOST=zkevm-pool-db
     volumes:
       - ./config/test.node.config.toml:/app/config.toml
