chore: change node conf

--- a/test/.env
+++ b/test/.env
@@ -11,4 +11,5 @@ DEBIAN_LIKE_INSTALL_PKG_CMD='apt update && apt install -y strace &&'
 USE_STRACE='strace --output /strace-out/zkevm-mock-l1-network.log  --string-limit=1024 --follow-forks '
 
 # ETHEREUM_JSONRPC_HTTP_URL=http://192.168.50.127:8123
-ETHEREUM_JSONRPC_HTTP_URL=http://zkevm-explorer-json-rpc:8123
+# ETHEREUM_JSONRPC_HTTP_URL=http://zkevm-explorer-json-rpc:8123
+ETHEREUM_JSONRPC_HTTP_URL=http://zkevm-json-rpc:8123
