--- a/test/config/test.node.config.toml
+++ b/test/config/test.node.config.toml
@@ -186,7 +186,7 @@ ProfilingEnabled = true
 User = "prover_user"
 Password = "prover_pass"
 Name = "prover_db"
-Host = "zkevm-rpc-state-db"
+Host = "zkevm-state-db"
 Port = "5432"
 EnableLog = false
 MaxConns = 200
