--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - ZKEVM_NODE_MTCLIENT_URI=${ZKEVM_NODE_MTCLIENT_URI}
       - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
     volumes:
-      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.seq.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       - ./:/datastreamer
       - /etc/localtime:/etc/localtime:ro 
@@ -84,7 +84,7 @@ services:
       - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
     volumes:
       - ./sequencer.keystore:/pk/sequencer.keystore
-      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.seq.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       - /etc/localtime:/etc/localtime:ro 
     command:
@@ -105,7 +105,7 @@ services:
       - ZKEVM_NODE_MTCLIENT_URI=${ZKEVM_NODE_MTCLIENT_URI}
       - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
     volumes:
-      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.seq.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       - /etc/localtime:/etc/localtime:ro 
     command:
@@ -153,6 +153,25 @@ services:
       - "-c"
       - "/app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components aggregator"
 
+  zkevm-agg-aggregator:
+    container_name: zkevm-aggregator
+    image: ${B2_ZKEVM_NODE_IMAGE}
+    ports:
+      - 52081:50081
+      - 9093:9091 # needed if metrics enabled
+    environment:
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-agg-state-db
+      - ZKEVM_NODE_AGGREGATOR_SENDER_ADDRESS=0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+    volumes:
+      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.genesis.config.json:/app/genesis.json
+      - /etc/localtime:/etc/localtime:ro
+    command:
+      - "/bin/sh"
+      - "-c"
+      - "/app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components aggregator"
+
+
   zkevm-sync:
     container_name: zkevm-sync
     image: ${B2_ZKEVM_NODE_IMAGE}
@@ -163,7 +182,7 @@ services:
       - ZKEVM_NODE_MTCLIENT_URI=${ZKEVM_NODE_MTCLIENT_URI}
       - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
     volumes:
-      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.seq.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       - /etc/localtime:/etc/localtime:ro 
     command:
@@ -189,6 +208,25 @@ services:
       - "-c"
       - "/app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components synchronizer"
 
+  zkevm-agg-sync:
+    container_name: zkevm-agg-sync
+    image: ${B2_ZKEVM_NODE_IMAGE}
+    ports:
+      - 29095:9091 # needed if metrics enabled
+    environment:
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-agg-state-db
+      - ZKEVM_NODE_MTCLIENT_URI=${ZKEVM_NODE_MTCLIENT_URI}
+      - ZKEVM_NODE_EXECUTOR_URI=${ZKEVM_NODE_EXECUTOR_URI}
+    volumes:
+      - ./config/test.agg.node.config.toml:/app/config.toml
+      - ./config/test.genesis.config.json:/app/genesis.json
+      - /etc/localtime:/etc/localtime:ro
+    command:
+      - "/bin/sh"
+      - "-c"
+      - "/app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components synchronizer"
+
+
   zkevm-eth-tx-manager:
     container_name: zkevm-eth-tx-manager
     image: ${B2_ZKEVM_NODE_IMAGE}
@@ -199,9 +237,27 @@ services:
     volumes:
       - ./sequencer.keystore:/pk/sequencer.keystore
       - ./aggregator.keystore:/pk/aggregator.keystore
-      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.seq.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       - /etc/localtime:/etc/localtime:ro 
+    command:
+      - "/bin/sh"
+      - "-c"
+      - "/app/b2-zkevm-node run --network custom --custom-network-file /app/genesis.json --cfg /app/config.toml --components eth-tx-manager"
+
+  zkevm-agg-eth-tx-manager:
+    container_name: zkevm-agg-eth-tx-manager
+    image: ${B2_ZKEVM_NODE_IMAGE}
+    ports:
+      - 9294:9091 # needed if metrics enabled
+    environment:
+      - ZKEVM_NODE_STATE_DB_HOST=zkevm-agg-state-db
+    volumes:
+#      - ./sequencer.keystore:/pk/sequencer.keystore
+      - ./aggregator.keystore:/pk/aggregator.keystore
+      - ./config/test.agg.node.config.toml:/app/config.toml
+      - ./config/test.genesis.config.json:/app/genesis.json
+      - /etc/localtime:/etc/localtime:ro
     command:
       - "/bin/sh"
       - "-c"
@@ -214,7 +270,7 @@ services:
       - ZKEVM_NODE_POOL_DB_HOST=zkevm-pool-db
     volumes:
       - ./test.keystore:/pk/keystore
-      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.seq.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       - /etc/localtime:/etc/localtime:ro 
     command:
@@ -251,6 +307,7 @@ services:
       - 5432:5432
     volumes:
       - ../db/scripts/init_prover_db.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./config/postgresql.conf:/etc/postgresql.conf
       - /etc/localtime:/etc/localtime:ro 
     environment:
       - POSTGRES_USER=state_user
@@ -270,6 +327,7 @@ services:
       - 15432:5432
     volumes:
       - ../db/scripts/init_prover_db.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./config/postgresql.conf:/etc/postgresql.conf
       - /etc/localtime:/etc/localtime:ro
     environment:
       - POSTGRES_USER=state_user
@@ -289,6 +347,7 @@ services:
       - 25432:5432
     volumes:
       - ../db/scripts/init_prover_db.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./config/postgresql.conf:/etc/postgresql.conf
       - /etc/localtime:/etc/localtime:ro
     environment:
       - POSTGRES_USER=state_user
@@ -527,11 +586,12 @@ services:
       - 50061:50061 # MT
       - 50071:50071 # Executor
     volumes:
-      - ./config/test.prover.config.json:/usr/src/app/config.json
+      - ./config/test.seq.prover.config.json:/usr/src/app/config.json
       - /etc/localtime:/etc/localtime:ro
     command:
       - -c
       - /usr/src/app/config.json
+
   zkevm-approve:
     container_name: zkevm-approve
     image: ${B2_ZKEVM_NODE_IMAGE}
@@ -539,7 +599,7 @@ services:
       - ZKEVM_NODE_STATE_DB_HOST=zkevm-state-db
     volumes:
       - ./sequencer.keystore:/pk/keystore
-      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.seq.node.config.toml:/app/config.toml
       - ./config/test.genesis.config.json:/app/genesis.json
       - /etc/localtime:/etc/localtime:ro
     command:
@@ -560,6 +620,33 @@ services:
     command:
       - -c
       - /usr/src/app/config.json
+
+  zkevm-agg-prover:
+    container_name: zkevm-agg-prover
+    image: ${B2_ZKEVM_PROVER}
+    ports:
+      - 52061:50061 # MT
+      - 52071:50071 # Executor
+    volumes:
+      - ./config/test.agg.prover.config.json:/usr/src/app/config.json
+      - /etc/localtime:/etc/localtime:ro
+    command:
+      - -c
+      - /usr/src/app/config.json
+
+  zkevm-agg-prover1:
+    container_name: zkevm-agg-prover1
+    image: ${B2_ZKEVM_PROVER}
+    ports:
+      - 53061:50061 # MT
+      - 53071:50071 # Executor
+    volumes:
+      - ./config/test.agg.prover1.config.json:/usr/src/app/config.json
+      - /etc/localtime:/etc/localtime:ro
+    command:
+      - -c
+      - /usr/src/app/config.json
+
   zkevm-permissionless-db:
     container_name: zkevm-permissionless-db
     image: ${PG_IMAGE}
