feat: finish roles deploy

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,7 @@ DOCKERCOMPOSEAPPAGG := zkevm-aggregator
 DOCKERCOMPOSEAPPRPC := zkevm-json-rpc
 DOCKERCOMPOSEAPPSYNC := zkevm-sync
 DOCKERCOMPOSEAPPETHTXMANAGER := zkevm-eth-tx-manager
+DOCKERCOMPOSEAGGAPPETHTXMANAGER := zkevm-agg-eth-tx-manager
 DOCKERCOMPOSESTATEDB := zkevm-state-db
 DOCKERCOMPOSEPOOLDB := zkevm-pool-db
 DOCKERCOMPOSEEVENTDB := zkevm-event-db
@@ -29,6 +30,13 @@ DOCKERCOMPOSERPCAPPRPC := zkevm-rpc-json-rpc
 DOCKERCOMPOSERPCAPPSYNC := zkevm-rpc-sync
 DOCKERCOMPOSERPCZKPROVER := zkevm-rpc-prover
 DOCKERCOMPOSERPCAPPL2GASP := zkevm-rpc-l2gaspricer
+DOCKERCOMPOSEAGGSTATEDB := zkevm-agg-state-db
+DOCKERCOMPOSEAGGPOOLDB := zkevm-agg-pool-db
+DOCKERCOMPOSEAGGEVENTDB := zkevm-agg-event-db
+DOCKERCOMPOSEAGGAPPSYNC := zkevm-agg-sync
+DOCKERCOMPOSEAGGZKPROVER := zkevm-agg-prover
+DOCKERCOMPOSEAGGZKPROVER1 := zkevm-agg-prover1
+DOCKERCOMPOSESEQZKPROVER := zkevm-seq-prover
 
 RUNSTATEDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSESTATEDB)
 RUNPOOLDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEPOOLDB)
@@ -36,6 +44,9 @@ RUNEVENTDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEEVENTDB)
 RUNRPCSTATEDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCSTATEDB)
 RUNRPCPOOLDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCPOOLDB)
 RUNRPCEVENTDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCEVENTDB)
+RUNAGGSTATEDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAGGSTATEDB)
+RUNAGGPOOLDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAGGPOOLDB)
+RUNAGGEVENTDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAGGEVENTDB)
 RUNSEQUENCER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPSEQ)
 RUNSEQUENCESENDER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPSEQSENDER)
 RUNL2GASPRICER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPL2GASP)
@@ -45,7 +56,9 @@ RUNJSONRPC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPRPC)
 RUNSYNC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPSYNC)
 RUNRPCJSONRPC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCAPPRPC)
 RUNRPCSYNC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCAPPSYNC)
+RUNAGGSYNC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAGGAPPSYNC)
 RUNETHTXMANAGER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAPPETHTXMANAGER)
+RUNAGGETHTXMANAGER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAGGAPPETHTXMANAGER)
 RUNGRAFANA := DOCKERGID=`stat -c '%g' /var/run/docker.sock` $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEGRAFANA)
 
 RUNL1NETWORK := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSENETWORK)
@@ -56,6 +69,9 @@ RUNEXPLORERL2DB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEEXPLORERL2DB)
 RUNEXPLORERJSONRPC := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEEXPLORERRPC)
 RUNZKPROVER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEZKPROVER)
 RUNRPCZKPROVER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSERPCZKPROVER)
+RUNAGGZKPROVER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAGGZKPROVER)
+RUNAGGZKPROVER1 := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEAGGZKPROVER1)
+RUNSEQZKPROVER := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSESEQZKPROVER)
 
 RUNPERMISSIONLESSDB := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEPERMISSIONLESSDB)
 RUNPERMISSIONLESSNODE := $(DOCKERCOMPOSE) up -d $(DOCKERCOMPOSEPERMISSIONLESSNODE)
@@ -501,6 +517,21 @@ run: ## Runs a full node
 run-roles: ## Runs the network according to the roles
 	$(RUNL1NETWORK)
 	sleep 10
+	echo "Start running seq roles services"
+	$(RUNSTATEDB)
+	$(RUNPOOLDB)
+	$(RUNEVENTDB)
+	sleep 5
+	$(RUNZKPROVER)
+	$(RUNAPPROVE)
+	sleep 5
+	$(RUNSYNC)
+	sleep 5
+	$(RUNETHTXMANAGER)
+	$(RUNSEQUENCER)
+	$(RUNSEQUENCESENDER)
+	$(RUNL2GASPRICER)
+	$(RUNJSONRPC)
 	echo "Start running rpc roles services"
 	$(RUNRPCSTATEDB)
 	$(RUNRPCPOOLDB)
@@ -512,6 +543,19 @@ run-roles: ## Runs the network according to the roles
 	sleep 5
 	$(RUNRPCL2GASPRICER)
 	$(RUNRPCJSONRPC)
+	echo "Start running agg roles services"
+	$(RUNAGGSTATEDB)
+	$(RUNAGGPOOLDB)
+	$(RUNAGGEVENTDB)
+	sleep 5
+	$(RUNAGGZKPROVER)
+	sleep 5
+	$(RUNAGGSYNC)
+	sleep 5
+	$(RUNAGGZKPROVER1)
+	sleep 5
+	$(RUNAGGETHTXMANAGER)
+
 
 .PHONY: stop-roles
 stop-roles: ## Stops the network according to the roles
